# KnowledgeBase

./: .env.dev  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  client.cpp  conan_profile  conanfile.txt  config_example.xml  docker-compose.yml  main.cpp  playlists_map.json  restart.sh  server.cpp  tests.cpp
base/poco/Foundation/: CMakeLists.txt
contrib/: CMakeLists.txt
contrib/c-ares-cmake/: CMakeLists.txt
contrib/curl-cmake/: CMakeLists.txt
contrib/double-conversion-cmake/: CMakeLists.txt
contrib/fmtlib-cmake/: CMakeLists.txt
contrib/lz4-cmake/: CMakeLists.txt
contrib/openssl-cmake/: CMakeLists.txt
contrib/rapidjson-cmake/: CMakeLists.txt
contrib/zlib-ng-cmake/: CMakeLists.txt
docker_run/: .env.dev  Dockerfile  build.sh  config_example.xml  docker-compose.yml  exec.sh  restart.sh  start.sh
frontend/: README.md  index.html  package-lock.json  package.json  webpack.config.js
frontend/src/: index.js
frontend/src/components/: AllMusic.js  App.css  App.js  Author.js  Categories.js  Category.js  ListSong.js  Profile.js  Song.js  WelcomePage.css  WelcomePage.js
frontend/src/components/context/: UserContext.js
frontend/src/hooks/: useApi.js
src/: CMakeLists.txt
src/Common/: Config.cpp  Config.h  Curl.cpp  Curl.h  Logging.cpp  Logging.h  httplib.h
src/Databases/: Clickhouse.cpp  Clickhouse.h  PostgreSQL.cpp  PostgreSQL.h
src/Server/: KnowledgeBaseServer.cpp  KnowledgeBaseServer.h
src/YandexMusic/: Curl.cpp  Curl.h  DownloadInfo.cpp  DownloadInfo.h  Playlist.cpp  Playlist.h  Request.cpp  Request.h  Supplement.cpp  Supplement.h  Track.cpp  Track.h  User.cpp  User.h  cookies.txt
test/: YandexMusicTest.cpp  YandexMusicTest.h  hello_test.cpp  hello_test.h
